--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,12 @@
 server {
     listen 80;
-    server_name localhost;
 
-    root /usr/share/nginx/html;
-    index index.html;
+    server_name _;
 
     location / {
-        try_files $uri $uri/ =404;
+        proxy_pass ${TARGET_SERVER};
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
