--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ server {
     server_name _;
 
     location / {
-        proxy_pass $targetServer  ;
+        proxy_pass $(TARGET_SERVER)  ;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
