--- a/nginx.conf
+++ b/nginx.conf
@@ -4,9 +4,9 @@ server {
     server_name _;
 
     location / {
-        proxy_pass https://mattabb123.ir;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass ${TARGET_SERVER};
+        proxy_set_header Host \$host;
+        proxy_set_header X-Real-IP \$remote_addr;
+        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
     }
 }
