--- a/nginx.conf
+++ b/nginx.conf
@@ -4,10 +4,10 @@ server {
     server_name _;
 
     location / {
-        proxy_pass $TARGET_SERVER; 
-        proxy_set_header Upgrade \$http_upgrade;
+        proxy_pass ${TARGET_SERVER}; 
+        proxy_set_header Upgrade §http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host \$host;
-        proxy_cache_bypass \$http_upgrade;
+        proxy_set_header Host §host;
+        proxy_cache_bypass §http_upgrade;
     }
 }
